--- a/applied stats (2023).tex
+++ b/applied stats (2023).tex
@@ -142,8 +142,8 @@
 \include{solutions/applied_2020.tex}
 \newpage
 \include{solutions/applied_2021.tex}
-% \newpage
-% \include{solutions/applied_2022.tex}
+\newpage
+\include{solutions/applied_2022.tex}
 
 \bibliographystyle{plainnat}
 \bibliography{references.bib}
