--- a/topics/cavi.tex
+++ b/topics/cavi.tex
@@ -213,5 +213,4 @@ Thus,
     &+\sum_{n=1}^N \rho_n\left(\psi(a)-\psi(a+b)-\frac{1}{2}\left((x_n-\lambda)^2 + \tau^2\right)-\log\rho_n\right)\\
     &+\sum_{n=1}^N (1-\rho_n)\left(\psi(b)-\psi(a+b) - \frac{1}{2}x_n^2-\log(1-\rho_n)\right),
 \end{align*}
-where $C_0 = \sum_{n=1}^N -\frac{1}{2}\log(2\cdot 3.142\ldots)$ is a constant that does not depend on $q$. 
-
+where $C_0 = \sum_{n=1}^N -\frac{1}{2}\log(2\cdot 3.142\ldots)$ is a constant that does not depend on $q$. An implementation of the CAVI algorithm for this simple mixture model is available here \url{https://github.com/Michael-Howes/Applied-Coaching/blob/main/Code/CAVI_mixture.ipynb}. 
