--- a/Code/student_mixture.ipynb
+++ b/Code/student_mixture.ipynb
@@ -20,16 +20,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\micha\\Documents\\GitHub\\Applied-Coaching\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2ac038e9390>"
+       "<matplotlib.collections.PathCollection at 0x14d55c1b410>"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -82,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +306,7 @@
        "tensor([0.1861])"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +341,7 @@
        "tensor(-534.7727)"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,16 +384,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2ac03912c90>]"
+       "[<matplotlib.lines.Line2D at 0x14d55c118d0>]"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -414,16 +422,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2ac0517f4d0>"
+       "<matplotlib.collections.PathCollection at 0x14d58f8fe90>"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -453,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -482,16 +490,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2ac04f14d10>"
+       "<matplotlib.collections.PathCollection at 0x14d55e8d590>"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
