change optimization title

--- a/topics/optimization.tex
+++ b/topics/optimization.tex
@@ -1,4 +1,4 @@
-\section{Review: Optimization 101 \footnote{Nikos Ignatiadis, Dan Kluger and M.H.}}\label{sec:Opt_review}
+\section{Convex optimization \footnote{Nikos Ignatiadis, Dan Kluger and M.H.}}\label{sec:Opt_review}
 
 Recognizing problems as convex optimization problems is a useful skill for the applied qualifying exam. A convex optimization problem is something of the form
 \begin{equation}\label{eq convex problem}
