change font style

--- a/applied_stats_2023.tex
+++ b/applied_stats_2023.tex
@@ -33,7 +33,7 @@
 
 \lstset{% setup listings
 	language=R,% set programming language
-	basicstyle=\ttfamily\small,% basic font style
+	basicstyle=\small,% basic font style
 	keywordstyle=\color{blue},% keyword style
         commentstyle=\color{gray},% comment style
 	numbersep=10pt,% space between line numbers and code
